<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidTest2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_vpn">Vpn activity</string>
    <string name="title_activity_language">LanguageActivity</string>
    <string name="title_activity_file_operate">FileOperateActivity</string>
    <string name="title_activity_multi_user">MultiUserActivity</string>
    <string name="btn_torchlight">Torch light</string>
    <string name="btn_widetouch">Wide touch</string>
    <string name="btn_none">btn_none</string>
    <string name="btn_USER_OWNER">btn_USER_OWNER</string>
    <string name="btn_USER_CURRENT">btn_USER_CURRENT</string>
    <string name="btn_USER_CURRENT_OR_SELF">btn_USER_CURRENT_OR_SELF</string>
    <string name="btn_USER_ALL">btn_USER_ALL</string>
    <string name="power_setting_app_restriction_title">Running apps management</string>
    <string name="title_activity_apps_list_view">AppsListViewActivity</string>
    <string name="no_running_apps">No running apps</string>
    <string name="title_activity_content_resolver_demo">ContentResolverDemoActivity</string>

</resources>
